--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-It is a project for a simple program on ruby, that say "Hello World". hmm... something wrong
+It is a project for a simple program on ruby, that say "Hello World".
